pkl-core/src/test/files/LanguageSnippetTests/input/errors/letExpressionError1.pkl
res1 =
  let (x = 1)
    let (y = 2)
      throw("ouch")